Atualizar vertical align

--- a/d005/index.html
+++ b/d005/index.html
@@ -8,15 +8,18 @@
   </head>
   <body>
     <h1>Quem sou eu?</h1>
-      <h2>Essa sou eu!!!</h2>
-        <img src="redes sociais\foto fnd branco 150.png" alt="Foto Natasha">
-        <p>Meu nome é Natasha Caixeta Tiburcio. No momento estou em transição de carreiras, saindo da engenharia mecânica e entrando em desenvolvimento de software. Apaixonada por tecnologia desde criança encontrei meu propósito de vida na criação.</p>
-      <h2>Contatos</h2>
-    <p> <a href="https://github.com/Tashaigg" target="_blank" rel="external"><img src="redes sociais/github.ico" alt="github icon">Tashaigg</a> </p>
-    <p> <a href="https://www.linkedin.com/in/natasha-iggwilv/" target="_blank" rel="external"><img src="redes sociais/linkedin.ico" alt="linkedin icon">Natasha Caixeta Tiburcio</a> </p>
-    <p> <a href="https://www.facebook.com/natasha.caixeta.9" target="_blank" rel="external"><img src="redes sociais/facebook.ico" alt="facebook icon">Natasha Caixeta</a> </p>
-    <p> <a href="https://www.instagram.com/tasha.igg/" target="_blank" rel="external"><img src="redes sociais/instagram.ico" alt="instagram icon">tasha.igg</a> </p>
-    <p> <a href="https://twitter.com/Tasha_igg" target="_blank" rel="external"><img src="redes sociais/twitter.ico" alt="twitter icon">Tasha_igg</a> </p>
-    <p> <a href="https://api.whatsapp.com/send?phone=5534999698618&text=Ol%C3%A1%2C%20Tasha." target="_blank" rel="external"><img src="redes sociais/whatsapp.ico" alt="whatsapp icon">(34) 99969-8618</a> </p>
+    <h2>Essa sou eu!!!</h2>
+    <img src="redes sociais\foto fnd branco 150.png" alt="Foto Natasha">
+    <p>Meu nome é Natasha Caixeta Tiburcio. No momento estou em transição de carreiras, saindo da engenharia mecânica e entrando em desenvolvimento de software. Apaixonada por tecnologia desde criança encontrei meu propósito de vida na criação.</p>
+    <h2>Contatos</h2>
+    <section>
+      <p> <a href="https://github.com/Tashaigg" target="_blank" rel="external"><img src="redes sociais/github.ico" alt="github icon"><strong>Tashaigg</strong></a> </p>
+      <p> <a href="https://www.linkedin.com/in/natasha-iggwilv/" target="_blank" rel="external"><img src="redes sociais/linkedin.ico" alt="linkedin icon"><strong>Natasha Caixeta Tiburcio</strong></a> </p>
+      <p> <a href="https://www.facebook.com/natasha.caixeta.9" target="_blank" rel="external"><img src="redes sociais/facebook.ico" alt="facebook icon"><strong>Natasha Caixeta</strong></a> </p>
+      <p> <a href="https://www.instagram.com/tasha.igg/" target="_blank" rel="external"><img src="redes sociais/instagram.ico" alt="instagram icon"><strong>tasha.igg</strong></a> </p>
+      <p> <a href="https://twitter.com/Tasha_igg" target="_blank" rel="external"><img src="redes sociais/twitter.ico" alt="twitter icon"><strong>Tasha_igg</strong></a> </p>
+      <p> <a href="https://api.whatsapp.com/send?phone=5534999698618&text=Ol%C3%A1%2C%20Tasha." target="_blank" rel="external"><img src="redes sociais/whatsapp.ico" alt="whatsapp icon"><strong>(34) 99969-8618</strong></a> </p>
+    </section>
   </body>
 </html>
+
